src/simpleparser.output
Nonterminals useless in grammar

    initializer
    initializer_list


Terminals unused in grammar

    CHAR_CONSTANT
    LE_OP
    GE_OP
    TYPE_NAME
    TYPEDEF
    EXTERN
    STATIC
    AUTO
    REGISTER
    STRUCT
    UNION
    ELLIPSIS
    GOTO


Rules useless in grammar

  146 initializer: assignment_expression
  147            | LCURLYBRACE initializer_list RCURLYBRACE
  148            | LCURLYBRACE initializer_list COMMA RCURLYBRACE

  149 initializer_list: initializer
  150                 | initializer_list COMMA initializer


State 256 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: type_specifier declarator block
    7                    | declarator block

    8 declaration: type_specifier SEMIC
    9            | type_specifier init_declarator_list SEMIC

   10 declaration_specifiers: type_specifier

   11 declarator: direct_declarator

   12 declaration_list: declaration
   13                 | declaration_list declaration

   14 block: LCURLYBRACE RCURLYBRACE
   15      | LCURLYBRACE statement_list RCURLYBRACE
   16      | LCURLYBRACE declaration_list RCURLYBRACE
   17      | LCURLYBRACE declaration_list statement_list RCURLYBRACE

   18 init_declarator_list: init_declarator
   19                     | init_declarator_list COMMA init_declarator

   20 type_specifier: VOID
   21               | CHAR
   22               | INT
   23               | FLOAT
   24               | DOUBLE
   25               | UNSIGNED
   26               | enum_specifier

   27 direct_declarator: IDENTIFIER
   28                  | LBRACKET declarator RBRACKET
   29                  | direct_declarator LBRACKET parameter_list RBRACKET
   30                  | direct_declarator LBRACKET identifier_list RBRACKET
   31                  | direct_declarator LBRACKET RBRACKET
   32                  | direct_declarator LSQUAREBRACKET constant_expression RSQUAREBRACKET
   33                  | direct_declarator LSQUAREBRACKET RSQUAREBRACKET

   34 statement_list: statement
   35               | statement_list statement

   36 init_declarator: declarator
   37                | declarator EQ assignment_expression

   38 constant_expression: conditional_expression

   39 identifier_list: IDENTIFIER
   40                | identifier_list COMMA IDENTIFIER

   41 statement: labeled_statement
   42          | block
   43          | expression_statement
   44          | selection_statement
   45          | iteration_statement
   46          | jump_statement

   47 conditional_expression: logical_or_expression
   48                       | logical_or_expression QMARK expression COLON conditional_expression

   49 parameter_list: parameter_declaration
   50               | parameter_list COMMA parameter_declaration

   51 labeled_statement: IDENTIFIER COLON statement
   52                  | CASE constant_expression COLON statement
   53                  | DEFAULT COLON statement

   54 expression_statement: SEMIC
   55                     | expression SEMIC

   56 selection_statement: IF LBRACKET expression RBRACKET statement ELSE statement
   57                    | IF LBRACKET expression RBRACKET statement
   58                    | SWITCH LBRACKET expression RBRACKET statement

   59 iteration_statement: WHILE LBRACKET expression RBRACKET statement
   60                    | DO statement WHILE LBRACKET expression RBRACKET SEMIC
   61                    | FOR LBRACKET expression_statement expression_statement LBRACKET statement
   62                    | FOR LBRACKET expression_statement expression_statement expression RBRACKET statement

   63 jump_statement: CONTINUE SEMIC
   64               | BREAK SEMIC
   65               | RETURN SEMIC
   66               | RETURN expression SEMIC

   67 assignment_expression: conditional_expression
   68                      | unary_expression EQ assignment_expression
   69                      | unary_expression MUL_ASSIGN assignment_expression
   70                      | unary_expression DIV_ASSIGN assignment_expression
   71                      | unary_expression MOD_ASSIGN assignment_expression
   72                      | unary_expression ADD_ASSIGN assignment_expression
   73                      | unary_expression SUB_ASSIGN assignment_expression
   74                      | unary_expression LEFT_ASSIGN assignment_expression
   75                      | unary_expression RIGHT_ASSIGN assignment_expression
   76                      | unary_expression AND_ASSIGN assignment_expression
   77                      | unary_expression XOR_ASSIGN assignment_expression
   78                      | unary_expression OR_ASSIGN assignment_expression

   79 logical_or_expression: logical_and_expression
   80                      | logical_or_expression OR_OP logical_and_expression

   81 expression: assignment_expression
   82           | expression COMMA assignment_expression

   83 unary_expression: postfix_expression
   84                 | INC_OP unary_expression
   85                 | DEC_OP unary_expression
   86                 | AND unary_expression
   87                 | ADD unary_expression
   88                 | SUB unary_expression
   89                 | TILDE unary_expression
   90                 | EXCLAM unary_expression
   91                 | SIZEOF unary_expression
   92                 | SIZEOF LBRACKET type_name RBRACKET

   93 logical_and_expression: inclusive_or_expression
   94                       | logical_and_expression AND_OP inclusive_or_expression

   95 postfix_expression: primary_expression
   96                   | postfix_expression LSQUAREBRACKET expression RSQUAREBRACKET
   97                   | postfix_expression LBRACKET RBRACKET
   98                   | postfix_expression LBRACKET argument_expression_list RBRACKET
   99                   | postfix_expression FULLSTOP IDENTIFIER
  100                   | postfix_expression PTR_OP IDENTIFIER
  101                   | postfix_expression INC_OP
  102                   | postfix_expression DEC_OP

  103 primary_expression: IDENTIFIER
  104                   | INT_CONSTANT
  105                   | FLOAT_CONSTANT
  106                   | STRING_LITERAL
  107                   | LBRACKET expression RBRACKET

  108 type_name: specifier_qualifier_list

  109 inclusive_or_expression: exclusive_or_expression
  110                        | inclusive_or_expression INCLOR exclusive_or_expression

  111 argument_expression_list: assignment_expression
  112                         | argument_expression_list COMMA assignment_expression

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list
  114                         | type_specifier

  115 exclusive_or_expression: and_expression
  116                        | exclusive_or_expression EXCLOR and_expression

  117 and_expression: equality_expression
  118               | and_expression AND equality_expression

  119 equality_expression: relational_expression
  120                    | equality_expression EQ_OP relational_expression
  121                    | equality_expression NE_OP relational_expression

  122 relational_expression: shift_expression
  123                      | relational_expression LESSTHAN shift_expression
  124                      | relational_expression GREATERTHAN shift_expression
  125                      | relational_expression LTEQ shift_expression
  126                      | relational_expression GTEQ shift_expression

  127 shift_expression: additive_expression
  128                 | shift_expression LEFT_OP additive_expression
  129                 | shift_expression RIGHT_OP additive_expression

  130 additive_expression: multiplicative_expression
  131                    | additive_expression ADD multiplicative_expression
  132                    | additive_expression SUB multiplicative_expression

  133 multiplicative_expression: unary_expression
  134                          | multiplicative_expression MUL unary_expression
  135                          | multiplicative_expression DIV unary_expression
  136                          | multiplicative_expression MOD unary_expression

  137 enumerator: IDENTIFIER
  138           | IDENTIFIER EQ constant_expression

  139 enumerator_list: enumerator
  140                | enumerator_list COMMA enumerator

  141 enum_specifier: ENUM LCURLYBRACE enumerator_list RCURLYBRACE
  142               | ENUM IDENTIFIER LCURLYBRACE enumerator_list RCURLYBRACE
  143               | ENUM IDENTIFIER

  144 parameter_declaration: declaration_specifiers declarator
  145                      | declaration_specifiers


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <string> (258) 27 39 40 51 99 100 103 137 138 142 143
    INT_CONSTANT <intNumber> (259) 104
    FLOAT_CONSTANT <fpNumber> (260) 105
    CHAR_CONSTANT (261)
    STRING_LITERAL <string> (262) 106
    SIZEOF (263) 91 92
    PTR_OP (264) 100
    INC_OP (265) 84 101
    DEC_OP (266) 85 102
    LEFT_OP (267) 128
    RIGHT_OP (268) 129
    LE_OP (269)
    GE_OP (270)
    EQ_OP (271) 120
    NE_OP (272) 121
    AND_OP (273) 94
    OR_OP (274) 80
    MUL_ASSIGN (275) 69
    DIV_ASSIGN (276) 70
    MOD_ASSIGN (277) 71
    ADD_ASSIGN (278) 72
    SUB_ASSIGN (279) 73
    LEFT_ASSIGN (280) 74
    RIGHT_ASSIGN (281) 75
    AND_ASSIGN (282) 76
    XOR_ASSIGN (283) 77
    OR_ASSIGN (284) 78
    TYPE_NAME (285)
    FULLSTOP (286) 99
    AND (287) 86 118
    TILDE (288) 89
    EXCLAM (289) 90
    TYPEDEF (290)
    EXTERN (291)
    STATIC (292)
    AUTO (293)
    REGISTER (294)
    QMARK (295) 48
    CHAR (296) 21
    INT (297) 22
    UNSIGNED (298) 25
    FLOAT (299) 23
    DOUBLE (300) 24
    VOID (301) 20
    STRUCT (302)
    UNION (303)
    ENUM (304) 141 142 143
    ELLIPSIS (305)
    CASE (306) 52
    DEFAULT (307) 53
    ELSE (308) 56
    SWITCH (309) 58
    WHILE (310) 59 60
    DO (311) 60
    FOR (312) 61 62
    GOTO (313)
    CONTINUE (314) 63
    BREAK (315) 64
    RETURN (316) 65 66
    IF (317) 56 57
    EQ (318) 37 68 138
    SEMIC (319) 8 9 54 55 60 63 64 65 66
    ADD (320) 87 131
    SUB (321) 88 132
    MUL (322) 134
    DIV (323) 135
    MOD (324) 136
    LESSTHAN (325) 123
    GREATERTHAN (326) 124
    LBRACKET (327) 28 29 30 31 56 57 58 59 60 61 62 92 97 98 107
    RBRACKET (328) 28 29 30 31 56 57 58 59 60 62 92 97 98 107
    LCURLYBRACE (329) 14 15 16 17 141 142
    RCURLYBRACE (330) 14 15 16 17 141 142
    LTEQ (331) 125
    GTEQ (332) 126
    EXCLOR (333) 116
    INCLOR (334) 110
    COMMA (335) 19 40 50 82 112 140
    COLON (336) 48 51 52 53
    LSQUAREBRACKET (337) 32 33 96
    RSQUAREBRACKET (338) 32 33 96


Nonterminals, with rules where they appear

    $accept (84)
        on left: 0
    ROOT (85)
        on left: 1
        on right: 0
    translation_unit <nodeptr> (86)
        on left: 2 3
        on right: 1 3
    external_declaration <nodeptr> (87)
        on left: 4 5
        on right: 2 3
    function_definition <nodeptr> (88)
        on left: 6 7
        on right: 4
    declaration <nodeptr> (89)
        on left: 8 9
        on right: 5 12 13
    declaration_specifiers <nodeptr> (90)
        on left: 10
        on right: 144 145
    declarator <nodeptr> (91)
        on left: 11
        on right: 6 7 28 36 37 144
    declaration_list <nodeptr> (92)
        on left: 12 13
        on right: 13 16 17
    block <nodeptr> (93)
        on left: 14 15 16 17
        on right: 6 7 42
    init_declarator_list <nodeptr> (94)
        on left: 18 19
        on right: 9 19
    type_specifier <nodeptr> (95)
        on left: 20 21 22 23 24 25 26
        on right: 6 8 9 10 113 114
    direct_declarator <nodeptr> (96)
        on left: 27 28 29 30 31 32 33
        on right: 11 29 30 31 32 33
    statement_list <nodeptr> (97)
        on left: 34 35
        on right: 15 17 35
    init_declarator <nodeptr> (98)
        on left: 36 37
        on right: 18 19
    constant_expression <nodeptr> (99)
        on left: 38
        on right: 32 52 138
    identifier_list <nodeptr> (100)
        on left: 39 40
        on right: 30 40
    statement <nodeptr> (101)
        on left: 41 42 43 44 45 46
        on right: 34 35 51 52 53 56 57 58 59 60 61 62
    conditional_expression <nodeptr> (102)
        on left: 47 48
        on right: 38 48 67
    parameter_list <nodeptr> (103)
        on left: 49 50
        on right: 29 50
    labeled_statement <nodeptr> (104)
        on left: 51 52 53
        on right: 41
    expression_statement <nodeptr> (105)
        on left: 54 55
        on right: 43 61 62
    selection_statement <nodeptr> (106)
        on left: 56 57 58
        on right: 44
    iteration_statement <nodeptr> (107)
        on left: 59 60 61 62
        on right: 45
    jump_statement <nodeptr> (108)
        on left: 63 64 65 66
        on right: 46
    assignment_expression <nodeptr> (109)
        on left: 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 37 68 69 70 71 72 73 74 75 76 77 78 81 82 111 112
    logical_or_expression <nodeptr> (110)
        on left: 79 80
        on right: 47 48 80
    expression <nodeptr> (111)
        on left: 81 82
        on right: 48 55 56 57 58 59 60 62 66 82 96 107
    unary_expression <nodeptr> (112)
        on left: 83 84 85 86 87 88 89 90 91 92
        on right: 68 69 70 71 72 73 74 75 76 77 78 84 85 86 87 88 89 90 91 133 134 135 136
    logical_and_expression <nodeptr> (113)
        on left: 93 94
        on right: 79 80 94
    postfix_expression <nodeptr> (114)
        on left: 95 96 97 98 99 100 101 102
        on right: 83 96 97 98 99 100 101 102
    primary_expression <nodeptr> (115)
        on left: 103 104 105 106 107
        on right: 95
    type_name <nodeptr> (116)
        on left: 108
        on right: 92
    inclusive_or_expression <nodeptr> (117)
        on left: 109 110
        on right: 93 94 110
    argument_expression_list <nodeptr> (118)
        on left: 111 112
        on right: 98 112
    specifier_qualifier_list <nodeptr> (119)
        on left: 113 114
        on right: 108 113
    exclusive_or_expression <nodeptr> (120)
        on left: 115 116
        on right: 109 110 116
    and_expression <nodeptr> (121)
        on left: 117 118
        on right: 115 116 118
    equality_expression <nodeptr> (122)
        on left: 119 120 121
        on right: 117 118 120 121
    relational_expression <nodeptr> (123)
        on left: 122 123 124 125 126
        on right: 119 120 121 123 124 125 126
    shift_expression <nodeptr> (124)
        on left: 127 128 129
        on right: 122 123 124 125 126 128 129
    additive_expression <nodeptr> (125)
        on left: 130 131 132
        on right: 127 128 129 131 132
    multiplicative_expression <nodeptr> (126)
        on left: 133 134 135 136
        on right: 130 131 132 134 135 136
    enumerator <nodeptr> (127)
        on left: 137 138
        on right: 139 140
    enumerator_list <nodeptr> (128)
        on left: 139 140
        on right: 140 141 142
    enum_specifier <nodeptr> (129)
        on left: 141 142 143
        on right: 26
    parameter_declaration <nodeptr> (130)
        on left: 144 145
        on right: 49 50


State 0

    0 $accept: . ROOT $end

    IDENTIFIER  shift, and go to state 1
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    FLOAT       shift, and go to state 5
    DOUBLE      shift, and go to state 6
    VOID        shift, and go to state 7
    ENUM        shift, and go to state 8
    LBRACKET    shift, and go to state 9

    ROOT                  go to state 10
    translation_unit      go to state 11
    external_declaration  go to state 12
    function_definition   go to state 13
    declaration           go to state 14
    declarator            go to state 15
    type_specifier        go to state 16
    direct_declarator     go to state 17
    enum_specifier        go to state 18


State 1

   27 direct_declarator: IDENTIFIER .

    $default  reduce using rule 27 (direct_declarator)


State 2

   21 type_specifier: CHAR .

    $default  reduce using rule 21 (type_specifier)


State 3

   22 type_specifier: INT .

    $default  reduce using rule 22 (type_specifier)


State 4

   25 type_specifier: UNSIGNED .

    $default  reduce using rule 25 (type_specifier)


State 5

   23 type_specifier: FLOAT .

    $default  reduce using rule 23 (type_specifier)


State 6

   24 type_specifier: DOUBLE .

    $default  reduce using rule 24 (type_specifier)


State 7

   20 type_specifier: VOID .

    $default  reduce using rule 20 (type_specifier)


State 8

  141 enum_specifier: ENUM . LCURLYBRACE enumerator_list RCURLYBRACE
  142               | ENUM . IDENTIFIER LCURLYBRACE enumerator_list RCURLYBRACE
  143               | ENUM . IDENTIFIER

    IDENTIFIER   shift, and go to state 19
    LCURLYBRACE  shift, and go to state 20


State 9

   28 direct_declarator: LBRACKET . declarator RBRACKET

    IDENTIFIER  shift, and go to state 1
    LBRACKET    shift, and go to state 9

    declarator         go to state 21
    direct_declarator  go to state 17


State 10

    0 $accept: ROOT . $end

    $end  shift, and go to state 22


State 11

    1 ROOT: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    IDENTIFIER  shift, and go to state 1
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    FLOAT       shift, and go to state 5
    DOUBLE      shift, and go to state 6
    VOID        shift, and go to state 7
    ENUM        shift, and go to state 8
    LBRACKET    shift, and go to state 9

    $default  reduce using rule 1 (ROOT)

    external_declaration  go to state 23
    function_definition   go to state 13
    declaration           go to state 14
    declarator            go to state 15
    type_specifier        go to state 16
    direct_declarator     go to state 17
    enum_specifier        go to state 18


State 12

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 13

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 14

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


State 15

    7 function_definition: declarator . block

    LCURLYBRACE  shift, and go to state 24

    block  go to state 25


State 16

    6 function_definition: type_specifier . declarator block
    8 declaration: type_specifier . SEMIC
    9            | type_specifier . init_declarator_list SEMIC

    IDENTIFIER  shift, and go to state 1
    SEMIC       shift, and go to state 26
    LBRACKET    shift, and go to state 9

    declarator            go to state 27
    init_declarator_list  go to state 28
    direct_declarator     go to state 17
    init_declarator       go to state 29


State 17

   11 declarator: direct_declarator .
   29 direct_declarator: direct_declarator . LBRACKET parameter_list RBRACKET
   30                  | direct_declarator . LBRACKET identifier_list RBRACKET
   31                  | direct_declarator . LBRACKET RBRACKET
   32                  | direct_declarator . LSQUAREBRACKET constant_expression RSQUAREBRACKET
   33                  | direct_declarator . LSQUAREBRACKET RSQUAREBRACKET

    LBRACKET        shift, and go to state 30
    LSQUAREBRACKET  shift, and go to state 31

    $default  reduce using rule 11 (declarator)


State 18

   26 type_specifier: enum_specifier .

    $default  reduce using rule 26 (type_specifier)


State 19

  142 enum_specifier: ENUM IDENTIFIER . LCURLYBRACE enumerator_list RCURLYBRACE
  143               | ENUM IDENTIFIER .

    LCURLYBRACE  shift, and go to state 32

    $default  reduce using rule 143 (enum_specifier)


State 20

  141 enum_specifier: ENUM LCURLYBRACE . enumerator_list RCURLYBRACE

    IDENTIFIER  shift, and go to state 33

    enumerator       go to state 34
    enumerator_list  go to state 35


State 21

   28 direct_declarator: LBRACKET declarator . RBRACKET

    RBRACKET  shift, and go to state 36


State 22

    0 $accept: ROOT $end .

    $default  accept


State 23

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 24

   14 block: LCURLYBRACE . RCURLYBRACE
   15      | LCURLYBRACE . statement_list RCURLYBRACE
   16      | LCURLYBRACE . declaration_list RCURLYBRACE
   17      | LCURLYBRACE . declaration_list statement_list RCURLYBRACE
